...
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ryY-kL-W1n" id="625-oc-S2Q">
                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kpk-wG-x8x">
                                                    <rect key="frame" x="526" y="6" width="46" height="30"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="cellDeleteButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="30" id="5e5-Ce-U9r"/>
                                                        <constraint firstAttribute="width" constant="46" id="dbF-Xd-JAi"/>
                                                    </constraints>
                                                    <state key="normal" title="delete"/>
                                                    <connections>
...
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                            </tableView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="68a-pN-6kE">
                                <rect key="frame" x="20" y="20" width="437" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="addThingsRandomlyButton"/>
                                <state key="normal" title="Add some cells to tableView"/>
                                <connections>
                                    <action selector="addThingsAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="W0K-RJ-wdY"/>
                                </connections>
                            </button>
                        </subviews>
...
