...
    }
    func tableView(tableView: UITableView, numberOfRowsInSection section: Int) -> Int {
        return data.count
    }
    
    func tableView(tableView: UITableView, didSelectRowAtIndexPath indexPath: NSIndexPath) {
        UIAlertView(title: "Yay!", message: "You succeeded in tapping cell \(indexPath.row).  Good job.", delegate: nil, cancelButtonTitle: nil, otherButtonTitles: "Alright").show()
    }
    
    
    
    @IBAction func addThingsAction(sender: AnyObject) {
        data.removeAll()
...
